Commit del dia 15/06/2023

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 
 <div class="container">
+  <app-menu></app-menu>
   <div class="row">
-    <p>Hola Mundo¡¡¡</p>
+    <!-- <p>Hola Mundo¡¡¡</p>
     <div>
       <h1>IDGS 902</h1>
     </div>
@@ -34,9 +35,10 @@
     <app-alumnos></app-alumnos>
     <hr>
     <app-idgs></app-idgs>
-
+    <hr> -->
+    <!-- <app-iric></app-iric> -->
+    <app-suma></app-suma>
 
   </div>
 </div>
 
- 
