--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,8 +37,10 @@
     <app-idgs></app-idgs>
     <hr> -->
     <!-- <app-iric></app-iric> -->
-    <app-suma></app-suma>
-
+    <!-- <app-suma></app-suma>
+    <app-operas-bas></app-operas-bas> -->
+    <h1 style="text-align: center;" class="my-2">Distancia entre 2 puntos</h1>
+<app-distancia2-pcomponents></app-distancia2-pcomponents>
   </div>
 </div>
 
