--- a/src/app/utl/formularios/operas-bas/operas-bas.component.html
+++ b/src/app/utl/formularios/operas-bas/operas-bas.component.html
@@ -1,7 +1,28 @@
-<mat-form-field class="example-form-field">
+<!-- <mat-form-field class="example-form-field">
     <mat-label>Clearable input</mat-label>
     <input matInput type="text" [(ngModel)]="value">
     <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
-        <!-- <mat-icon>close</mat-icon> -->
+        <mat-icon>close</mat-icon>
     </button>
 </mat-form-field>
+
+<mat-radio-group aria-label="Select an option">
+    <mat-radio-button value="1">Option 1</mat-radio-button>
+    <mat-radio-button value="2">Option 2</mat-radio-button>
+  </mat-radio-group> -->
+
+<div class="contenedor">
+    <mat-form-field>
+        <input matInput [(ngModel)]="num1" type="number" placeholder="Numero1" >
+    </mat-form-field>
+    <mat-form-field>
+        <input matInput [(ngModel)]="num2" type="number" placeholder="Numero2">
+    </mat-form-field>
+    <mat-radio-group name="opciones" [(ngModel)]="operacionSeleccionada">
+        <mat-radio-button *ngFor="let op of tipoOperaciones" [value]="op" name="opciones" style="margin: 10px;">
+        {{op}}
+        </mat-radio-button>
+    </mat-radio-group>
+    <button mat-raised-button color="primary" (click)="calcular()">Calcular</button>
+    <h1><p>el Resultado es: {{resultado}}</p></h1>
+</div>
