--- a/src/app/utl/iric/iric.component.css
+++ b/src/app/utl/iric/iric.component.css
@@ -1,10 +1,12 @@
-thead{
-    color: purple;
+thead {
+  color: purple;
 }
-.btn-primary{
-    background-color: blueviolet;
+
+.btn-primry {
+  background-color: blueviolet;
 }
+
 .card-header{
-    background-color: blueviolet;
-    color: white;
+  background-color: blueviolet;
+  color: white;
 }
